# aws-crt-kotlin

./: .brazil.json  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.gradle.kts  builder.json  dockcross-linux-arm64  dockcross-linux-x64  gradle.properties  settings.gradle.kts
.changes/: 02e5ad67-aad8-4802-86fd-475ed01480f8.json  0ee358da-4ef1-4cd6-b485-71a5a8163de8.json  11a891eb-b51f-4508-9010-f17d35ce96a3.json  1695ebf6-1351-4555-8ab9-d90c91622549.json  1803e06b-e4dc-4566-bb54-e05ff90eb5d3.json  1df4ae4b-0bba-4e59-9933-47a7f6bb8bac.json  2461e178-b595-4fa3-9cf1-4bc5d7672d01.json  28e498f0-532c-4688-aee5-5be3e91641b4.json  337cca7e-6a38-4601-b5d2-9f8d12dd60f7.json  3c9cedab-7cd3-479c-b887-0cbdceeb9341.json  3d6fffae-2ce4-478f-b410-fce0afe16588.json  428e757e-6e6d-4c92-b6bd-600b2194771e.json  49b860c3-3fce-40fa-acf7-e97650f49016.json  532b5017-15ee-4c6d-9250-4e7b2ff978a3.json  5b6cf8f2-eff6-4def-a335-1de5052a810a.json  5c32e493-2c13-4eef-9ffc-3c3a2326bcf6.json  66c32a01-7fa9-4af6-804c-19cf97e0ac20.json  87608337-174a-46aa-add3-8ec1370c737c.json  8f37dc92-0373-48a3-8b3a-b5ca575fce6c.json  963ddb76-2622-44d7-bb41-3439a5f033a5.json  9746125e-3a57-412f-9c1b-6912c3920601.json  9a1c6c45-3d0e-484f-892f-ce06fc867c9d.json  9f0978c5-7652-4cef-9d03-6aab441c1d8d.json  a070184a-04e1-46b7-bbb7-73d7cf95b495.json  a211954e-33f3-41a4-907b-36b173f7021f.json  aa10152c-0040-46b3-8551-ed63aca0c6ee.json  b062a6cf-d42b-4104-a51d-48d9cc992a75.json  b2dbabc2-5fa5-4758-a651-b6bcb395d570.json  b633d601-1926-47e6-9304-1c8b24a511d9.json  b92432b1-14e7-4aff-ad44-05ee02b0c416.json  bc0b11a8-48ce-4bc0-8b3f-4ee858477647.json  c2af8534-4505-415d-bafa-ab035e261c08.json  c370cdf8-3d1b-4ef0-a236-9ffab0901f6f.json  cfc58da7-d2c6-47d7-a40e-72893b49bca7.json  d56dbe9f-1d82-4c2d-963d-23e4a406f381.json  f4d68f74-f47e-4157-a78c-2847b4311f36.json  f8ec80f6-cd00-413a-b59a-5d53159c094e.json  ffcbc974-9da9-463c-9813-798dc395baae.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/actions/aws-crt-kotlin-custom-gradle-distribution-url/: action.yml
.github/actions/custom-gradle-distribution-url/: action.yml
.github/actions/setup-build/: action.yml
.github/scripts/: run-container-test-binary.sh  run-container-test.py
.github/workflows/: artifact-size-metrics.yml  ci.yaml  kat-transform.yml  lint.yml  no-warns.yaml  stale_issue.yml
api/android/: aws-crt-kotlin.api
aws-crt-kotlin/: build.gradle.kts
aws-crt-kotlin/api/: aws-crt-kotlin.api
aws-crt-kotlin/api/android/: aws-crt-kotlin.api
aws-crt-kotlin/api/jvm/: aws-crt-kotlin.api
aws-crt-kotlin/common/src/aws/sdk/kotlin/crt/: AsyncShutdown.kt  CRT.kt  Closeable.kt  CrtRuntimeException.kt  Log.kt  WithCrt.kt
aws-crt-kotlin/common/src/aws/sdk/kotlin/crt/http/: Headers.kt  HttpClientConnectionManager.kt  HttpException.kt  HttpManagerMetrics.kt  HttpRequest.kt  HttpRequestBodyStream.kt  HttpStream.kt  HttpStreamMetrics.kt  HttpStreamResponseHandler.kt
aws-crt-kotlin/common/src/aws/sdk/kotlin/crt/io/: Buffer.kt  ClientBootstrap.kt  EventLoopGroup.kt  HostResolver.kt  MutableBuffer.kt  SocketOptions.kt  TlsCipherPreference.kt  TlsContext.kt  TlsContextOptions.kt  TlsVersion.kt  Uri.kt
aws-crt-kotlin/common/src/aws/sdk/kotlin/crt/util/: CaseInsensitiveMap.kt  Digest.kt
aws-crt-kotlin/common/test/aws/sdk/kotlin/crt/: CrtTest.kt
aws-crt-kotlin/common/test/aws/sdk/kotlin/crt/http/: HttpClientConnectionTest.kt  HttpClientTest.kt  HttpRequestBuilderTest.kt
aws-crt-kotlin/common/test/aws/sdk/kotlin/crt/io/: ClientBootstrapTest.kt  EventLoopGroupTest.kt  HostResolverTest.kt  MutableBufferTest.kt  TlsContextTest.kt  UriTest.kt
aws-crt-kotlin/common/test/aws/sdk/kotlin/crt/util/: DigestTest.kt
aws-crt-kotlin/jvm/src/aws/sdk/kotlin/crt/: CRT.kt  CrtExceptionUtil.kt
aws-crt-kotlin/jvm/src/aws/sdk/kotlin/crt/http/: HttpClientConnectionManagerJVM.kt  HttpRequestUtil.kt  HttpStreamJVM.kt  HttpStreamMetricsJVM.kt
aws-crt-kotlin/jvm/src/aws/sdk/kotlin/crt/io/: ClientBootstrapJVM.kt  EventLoopGroupJVM.kt  HostResolverJVM.kt  MutableBufferJVM.kt  TlsContextJVM.kt
aws-crt-kotlin/jvm/src/aws/sdk/kotlin/crt/util/: DigestJVM.kt
aws-crt-kotlin/jvm/test/aws/sdk/kotlin/crt/http/: HttpRequestResponseTest.kt
aws-crt-kotlin/native/interop/: crt.def
aws-crt-kotlin/native/src/aws/sdk/kotlin/crt/: Allocator.kt  Assertions.kt  CRTNative.kt  CrtResource.kt  Logging.kt  NativeHandle.kt  PlatformNative.kt  WithCrt.kt
aws-crt-kotlin/native/src/aws/sdk/kotlin/crt/http/: HttpClientConnectionManagerNative.kt  HttpClientConnectionNative.kt  HttpStreamNative.kt  RequestBodyStream.kt
aws-crt-kotlin/native/src/aws/sdk/kotlin/crt/io/: UriNative.kt  (+6 more)
aws-crt-kotlin/native/test/aws/sdk/kotlin/crt/: ByteCursorBufferTest.kt  CRTNativeTest.kt  StringUtilsTests.kt  UtilsNative.kt
build-support/: build.gradle.kts
docker-images/: build-all.sh  build-images.sh
docker-images/linux-arm64/: Dockerfile
docker-images/linux-x64/: Dockerfile  Toolchain.cmake
docker-images/mingw-x64/: Dockerfile  Toolchain.cmake
elasticurl/: build.gradle.kts
elasticurl/src/commonMain/kotlin/: Application.kt  CliOpts.kt  Utils.kt
elasticurl/src/jvmMain/kotlin/: CoroutinesJVM.kt  UtilsJVM.kt
elasticurl/src/nativeMain/kotlin/: CoroutinesNative.kt  UtilsNative.kt
gradle/: libs.versions.toml  native.gradle  posix.gradle  publish.gradle  utility.gradle
gradle/wrapper/: gradle-wrapper.properties
scripts/: elasticurl-test.sh  elasticurlJvm.sh
src/common/src/aws/sdk/kotlin/crt/: AsyncShutdown.kt  CRT.kt  Closeable.kt  CrtRuntimeException.kt  Debug.kt  Log.kt  Platform.kt
src/common/src/software/amazon/awssdk/crt/: CRT.kt
src/common/test/aws/sdk/kotlin/crt/: CrtTest.kt  Utils.kt
src/jvm/src/aws/sdk/kotlin/crt/: CRT.kt  CrtExceptionUtil.kt  PlatformJVM.kt
src/jvm/src/software/amazon/awssdk/crt/: CRT.kt
src/jvm/test/aws/sdk/kotlin/crt/: UtilsJVM.kt
src/native/interop/: common.def  crt.def  io.def
src/native/src/software/amazon/awssdk/crt/: CRT.kt  Common.kt
src/posix/src/software/amazon/awssdk/crt/: CRT.kt  Common.kt
(+326 files in other folders)
